tests/declare_fun/declare_fun.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `foo(...)` to undefined because boolean [1] is incompatible with undefined [2].

   test.js:7:2
   7| (foo(false): void); // error, boolean ~/~ undefined
       ^^^^^^^^^^

References:
   test.js:7:6
   7| (foo(false): void); // error, boolean ~/~ undefined
           ^^^^^ [1]
   test.js:7:14
   7| (foo(false): void); // error, boolean ~/~ undefined
                   ^^^^ [2]



Found 1 error
